
2004-09-16	Florian Boor  	<florian.boor@kernelconcepts.de>

	* suid.c: Use xtscal for calibration directly.

2004-09-12	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* Released V 0.1.19
	* soundctl.c: Removed another obsolete ioctl().
	* soundctrl.c: Fixed segfault and some minor issues.
	* sound.c: Added some comments.
	* main.c: Minor fix in applet handling.
	* tasks.*: Implemented sound settings save/restore task.
	* main.c: Added commandline task for sound setup save/restore.
	* sound.c: Sound playback after slider change.
	* soundctrl.*: Implemented simple playback function. (play_sample)
	* (new) data/activate.wav: Sound sample file.
	* Makefile: Installation of sound sample.

2004-09-11	Florian Boor  	<florian.boor@kernelconcepts.de>

	* storage.c: Minor label formating fix.
	* sound/*: Save and restore of mixer values. Filtering, applying settings.
	* HACKING: Some updates, made the sound tool the sound applet the example.	
	* sound/*: Implemented sound control front- and backend:
	           - Basic frontend
			   - Reading device info from backend
	* sound/soundctrl.*: New files for sound interface backend.

2004-09-10	Florian Boor  	<florian.boor@kernelconcepts.de>

	* tools/interface.c: Removed tabs from messages. Fixing #1188
	* sleep/confGUI.c: Fixed bug causing slider to become disabled.
	  sleep/callbacks.c
	* sound/sound.*, gpe-conf-sound.desktop.in, gpe-conf-sound.png: new files.
	* Makefile, main.c: Added new module: Sound settings.
	* Makefile: V 0.1.19

2004-09-09	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released V 0.1.18
	* storage.c: Display status of mtd block devices.
	* *.desktop.in: Turned on startup notification.
	* users/passwd.*: New files that provide password changing function.
	                passwd.c is taken from busybox 1.00-rc3
	* users/callbacks.c, suid.c: Changed user update to new function instead 
	                             of pipe.
	* Makefile: Added new module, changed version number.
